Grammar/AST/fwdast/y.output
Terminals unused in grammar

   STRING
   VECTOR
   LOOP_WHILE
   LOOP_FOR
   LOOP_IF
   LOOP_ELSE
   LOOP_REPEAT
   IN
   SEQ
   FROM
   BREAK
   NEXT
   PRINT
   RA
   RRA
   OPREL
   '{'
   '}'
   '|'
   '&'
   ','
   ':'


Grammar

    0 $accept: ROOT $end

    1 ROOT: Statement END_OF_FILE

    2 Statement: SimpleStatement Statement
    3          | %empty

    4 SimpleStatement: SmallStatement NL

    5 SmallStatement: Expression

    6 Expression: AssignmentExpression

    7 AssignmentExpression: ID_pass opassgnleft Expr1main

    8 Expr1main: Expr1

    9 ID_pass: ID

   10 Expr1: Expr2

   11 Expr2: Expr3
   12      | Expr2 '+' Expr3
   13      | Expr2 '-' Expr3

   14 Expr3: Expr4
   15      | Expr3 '*' Expr4
   16      | Expr3 '/' Expr4

   17 Expr4: ID
   18      | NUM
   19      | '(' Expr1 ')'

   20 opassgnleft: '='
   21            | LA
   22            | LLA


Terminals, with rules where they appear

$end (0) 0
'&' (38)
'(' (40) 19
')' (41) 19
'*' (42) 15
'+' (43) 12
',' (44)
'-' (45) 13
'/' (47) 16
':' (58)
'=' (61) 20
'{' (123)
'|' (124)
'}' (125)
error (256)
STRING (258)
ID (259) 9 17
NUM (260) 18
VECTOR (261)
LOOP_WHILE (262)
LOOP_FOR (263)
LOOP_IF (264)
LOOP_ELSE (265)
LOOP_REPEAT (266)
IN (267)
SEQ (268)
FROM (269)
BREAK (270)
NEXT (271)
PRINT (272)
LLA (273) 22
LA (274) 21
RA (275)
RRA (276)
OPREL (277)
NL (278) 4
END_OF_FILE (279) 1


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
ROOT (39)
    on left: 1, on right: 0
Statement (40)
    on left: 2 3, on right: 1 2
SimpleStatement (41)
    on left: 4, on right: 2
SmallStatement (42)
    on left: 5, on right: 4
Expression (43)
    on left: 6, on right: 5
AssignmentExpression (44)
    on left: 7, on right: 6
Expr1main (45)
    on left: 8, on right: 7
ID_pass (46)
    on left: 9, on right: 7
Expr1 (47)
    on left: 10, on right: 8 19
Expr2 (48)
    on left: 11 12 13, on right: 10 12 13
Expr3 (49)
    on left: 14 15 16, on right: 11 12 13 15 16
Expr4 (50)
    on left: 17 18 19, on right: 14 15 16
opassgnleft (51)
    on left: 20 21 22, on right: 7


State 0

    0 $accept: . ROOT $end

    ID  shift, and go to state 1

    $default  reduce using rule 3 (Statement)

    ROOT                  go to state 2
    Statement             go to state 3
    SimpleStatement       go to state 4
    SmallStatement        go to state 5
    Expression            go to state 6
    AssignmentExpression  go to state 7
    ID_pass               go to state 8


State 1

    9 ID_pass: ID .

    $default  reduce using rule 9 (ID_pass)


State 2

    0 $accept: ROOT . $end

    $end  shift, and go to state 9


State 3

    1 ROOT: Statement . END_OF_FILE

    END_OF_FILE  shift, and go to state 10


State 4

    2 Statement: SimpleStatement . Statement

    ID  shift, and go to state 1

    $default  reduce using rule 3 (Statement)

    Statement             go to state 11
    SimpleStatement       go to state 4
    SmallStatement        go to state 5
    Expression            go to state 6
    AssignmentExpression  go to state 7
    ID_pass               go to state 8


State 5

    4 SimpleStatement: SmallStatement . NL

    NL  shift, and go to state 12


State 6

    5 SmallStatement: Expression .

    $default  reduce using rule 5 (SmallStatement)


State 7

    6 Expression: AssignmentExpression .

    $default  reduce using rule 6 (Expression)


State 8

    7 AssignmentExpression: ID_pass . opassgnleft Expr1main

    LLA  shift, and go to state 13
    LA   shift, and go to state 14
    '='  shift, and go to state 15

    opassgnleft  go to state 16


State 9

    0 $accept: ROOT $end .

    $default  accept


State 10

    1 ROOT: Statement END_OF_FILE .

    $default  reduce using rule 1 (ROOT)


State 11

    2 Statement: SimpleStatement Statement .

    $default  reduce using rule 2 (Statement)


State 12

    4 SimpleStatement: SmallStatement NL .

    $default  reduce using rule 4 (SimpleStatement)


State 13

   22 opassgnleft: LLA .

    $default  reduce using rule 22 (opassgnleft)


State 14

   21 opassgnleft: LA .

    $default  reduce using rule 21 (opassgnleft)


State 15

   20 opassgnleft: '=' .

    $default  reduce using rule 20 (opassgnleft)


State 16

    7 AssignmentExpression: ID_pass opassgnleft . Expr1main

    ID   shift, and go to state 17
    NUM  shift, and go to state 18
    '('  shift, and go to state 19

    Expr1main  go to state 20
    Expr1      go to state 21
    Expr2      go to state 22
    Expr3      go to state 23
    Expr4      go to state 24


State 17

   17 Expr4: ID .

    $default  reduce using rule 17 (Expr4)


State 18

   18 Expr4: NUM .

    $default  reduce using rule 18 (Expr4)


State 19

   19 Expr4: '(' . Expr1 ')'

    ID   shift, and go to state 17
    NUM  shift, and go to state 18
    '('  shift, and go to state 19

    Expr1  go to state 25
    Expr2  go to state 22
    Expr3  go to state 23
    Expr4  go to state 24


State 20

    7 AssignmentExpression: ID_pass opassgnleft Expr1main .

    $default  reduce using rule 7 (AssignmentExpression)


State 21

    8 Expr1main: Expr1 .

    $default  reduce using rule 8 (Expr1main)


State 22

   10 Expr1: Expr2 .
   12 Expr2: Expr2 . '+' Expr3
   13      | Expr2 . '-' Expr3

    '+'  shift, and go to state 26
    '-'  shift, and go to state 27

    $default  reduce using rule 10 (Expr1)


State 23

   11 Expr2: Expr3 .
   15 Expr3: Expr3 . '*' Expr4
   16      | Expr3 . '/' Expr4

    '*'  shift, and go to state 28
    '/'  shift, and go to state 29

    $default  reduce using rule 11 (Expr2)


State 24

   14 Expr3: Expr4 .

    $default  reduce using rule 14 (Expr3)


State 25

   19 Expr4: '(' Expr1 . ')'

    ')'  shift, and go to state 30


State 26

   12 Expr2: Expr2 '+' . Expr3

    ID   shift, and go to state 17
    NUM  shift, and go to state 18
    '('  shift, and go to state 19

    Expr3  go to state 31
    Expr4  go to state 24


State 27

   13 Expr2: Expr2 '-' . Expr3

    ID   shift, and go to state 17
    NUM  shift, and go to state 18
    '('  shift, and go to state 19

    Expr3  go to state 32
    Expr4  go to state 24


State 28

   15 Expr3: Expr3 '*' . Expr4

    ID   shift, and go to state 17
    NUM  shift, and go to state 18
    '('  shift, and go to state 19

    Expr4  go to state 33


State 29

   16 Expr3: Expr3 '/' . Expr4

    ID   shift, and go to state 17
    NUM  shift, and go to state 18
    '('  shift, and go to state 19

    Expr4  go to state 34


State 30

   19 Expr4: '(' Expr1 ')' .

    $default  reduce using rule 19 (Expr4)


State 31

   12 Expr2: Expr2 '+' Expr3 .
   15 Expr3: Expr3 . '*' Expr4
   16      | Expr3 . '/' Expr4

    '*'  shift, and go to state 28
    '/'  shift, and go to state 29

    $default  reduce using rule 12 (Expr2)


State 32

   13 Expr2: Expr2 '-' Expr3 .
   15 Expr3: Expr3 . '*' Expr4
   16      | Expr3 . '/' Expr4

    '*'  shift, and go to state 28
    '/'  shift, and go to state 29

    $default  reduce using rule 13 (Expr2)


State 33

   15 Expr3: Expr3 '*' Expr4 .

    $default  reduce using rule 15 (Expr3)


State 34

   16 Expr3: Expr3 '/' Expr4 .

    $default  reduce using rule 16 (Expr3)
